When a Let's Encrypt certificate is automatically renewed, the new cert will be copied to servers like Postfix, Dovecot and Webmin that were using the old version.
Added configuration options to allow domain owners to see overall system statistics, and run validation on their domains.
---- Changes since 5.05 ----
Updated the phpMyAdmin script installer to versions 4.6.5.2, 4.4.15.9 and 4.0.10.18, Roundcube to 1.2.3, MediaWiki to 1.28.0, Mantis to 1.3.6 and 2.1.0, Typo3 to 6.2.30, Wordpress to 4.7.2, Drupal to 8.2.6 and 7.54, NextCloud to 10.0.3 and 11.0.1, IONcube to 6.0.9, Joomla to 3.6.5, Node.js to 7.5.0, Piwik to 3.0.1, TikiWiki to 16.2 and 12.11, Dolibarr to 3.9.4, Moodle to 3.2, Magento to 2.1.4, SMF to 2.0.13, Ghost to 0.11.4, phpMyAdmin to 4.0.10.19 and 4.6.6, ZenPhoto to 1.4.14, Revive Adserver to 4.0.1, Instiki to 0.20.1, and ownCloud to 9.1.4.
Added support for FPM as a PHP execution mode, on systems that have a system package which runs an FPM pool server.
Resellers and domain owners can be granted the ability to migrate backups from other control panels, like cPanel and Plesk.
Added a button to the Manage SSL Certifcate page and a flag to the modify-web API command to break shared certificate linkage.
Added the start-stop-script API command to manage the servers behind Ruby and Node.JS scripts.
Virtualmin will now also generate SSHFP DNS records (for SSH host keys) when it creates TLSA records.
---- Changes since 5.06 ----
Updated the FosWiki script installer to version 2.1.3, WHMCS to 6.3.2 and 7.1.1, Node.js to 7.6.0, Magento to 2.1.5, Ghost to 0.11.7, DokuWiki to 2017-02-19a, NextCloud to 11.0.2 and 10.0.4, Piwik to 3.0.2, and Coppermine to 1.5.46.
---- Changes since 5.07 ----
Updates the Node.JS installer to version 7.7.2, DokuWiki to 2017-02-19b, Roundcube to 1.2.4, Mantis to 2.2.0, and Wordpress to 4.7.3.