@@ -1561,3 +1561,4 @@ Virtualmin will now also generate SSHFP DNS records (for SSH host keys) when it 
 Updated the FosWiki script installer to version 2.1.3, WHMCS to 6.3.2 and 7.1.1, Node.js to 7.6.0, Magento to 2.1.5, Ghost to 0.11.7, DokuWiki to 2017-02-19a, NextCloud to 11.0.2 and 10.0.4, Piwik to 3.0.2, and Coppermine to 1.5.46.
 ---- Changes since 5.07 ----
 Updates the Node.JS installer to version 7.7.2, DokuWiki to 2017-02-19b, Roundcube to 1.2.4, Mantis to 2.2.0, and Wordpress to 4.7.3.
+The SSL certificate for all virtual servers will now be configured for use in the Virtualmin UI on port 10000, so that URLs like https://admin.domain.com:10000/ work without cert errors.
